# dogecoin

./: "LAS ENSEÑANZAS DE LIZ"  .cirrus.yml  .deepsource.toml  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .qmake.stash  .readthedocs.yml  .stylish-haskell.yaml  .travis.yml  Bitcoin CryptoGraphyBTC  CHANGES.md  CODEOWNERS  CODING_STANDARDS.md  CONTRIBUTING.md  CONTRIBUTING.md - polish  COPYING  Comet  DH3XoAM9d9rfDVa9WYrZvPTCT548UiAiVz  Dockerfile  Dogecoin - An open-source peer-to-peer digital currency.html  DogecoinRpcExample.cpp  Dogecoin_Blocksize_Increase.cpp  Ehco  INSTALL  INSTALL.md  INSTALL_SCRAPCOIN.sh  Javascript API Library  MIT-LICENSE  Makefile  Makefile.am  Meteor  NOTICE  PAT_OPTIMIZATION_CHECKLIST.md  PAT_Sim.spec  PYTHON_DEBUG=2  Peso  README.md  README.md.👩‍🚀  (+62 more)
cardano-api/: ChangeLog.md  README.md  cardano-api.cabal
cardano-api/test/: cardano-api-test.cabal  cardano-api-test.hs
cardano-cli/: ChangeLog.md  LICENSE  README.md  cardano-cli.cabal
cardano-cli/app/: cardano-cli.hs
cardano-cli/test/: Readme.md  cardano-cli-golden.hs  cardano-cli-test.hs
cardano-client-demo/: CHANGELOG.md  LICENSE  LedgerState.hs  NOTICE  ScanBlocks.hs  ScanBlocksPipelined.hs  cardano-client-demo.cabal
cardano-config/: README.md  cardano-config.cabal
cardano-node/: ChangeLog.md  NOTICE  README.md  cardano-node.cabal
cardano-node-chairman/: cardano-node-chairman.cabal
cardano-node-chairman/app/: cardano-node-chairman.hs
cardano-node-chairman/test/: Main.hs
cardano-node-chairman/testnet/: Main.hs
cardano-node/app/: cardano-node.hs
cardano-node/test/: cardano-node-test.hs
cardano-submit-api/: cardano-submit-api.cabal  swagger.yaml  testing-tx-submit.md
cardano-submit-api/app/: Main.hs
cardano-submit-api/config/: tx-submit-mainnet-config.yaml
cardano-submit-api/test/: run.sh  test.hs
src/: .gitignore  Makefile.am  Makefile.bench.include  Makefile.bootstrap.include  Makefile.crc32c.include  Makefile.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.h  amount.cpp  amount.h  arith_uint256.cpp  attributes.h  auxiliaryblockrequest.cpp  auxpow.cpp  auxpow.h  base58.cpp  base58.h  bignum.h  bip39.cpp  bip39.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  bitcoinrpc.h  blockencodings.cpp  (+174 more)
src/bench/: .gitignore  base58.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  block_assemble.cpp  chacha20.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  data.cpp  data.h  mempool_eviction.cpp  merkle_root.cpp  rollingbloom.cpp  rpc_blockchain.cpp  scrypt.cpp  verify_script.cpp  wallet_balance.cpp
src/bootstrap/: bootstrap.cpp
src/common/: pcp.cpp  pcp.h
src/compat/: arm_acle_patched.h  arm_acle_selector.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h
src/crypto/: chacha20.cpp  common.h  hmac_sha256.h  hwcap.cpp  hwcap.h  ripemd160.cpp  scrypt-sse2.cpp  scrypt.cpp  scrypt.h  sha1.cpp  sha1.h  sha2.cpp  sha256.cpp  sha256.h  sha3.cpp  sha512-armv82.cpp  sha512.cpp  sha512.h
src/dogecoin/: wallet.h
src/interfaces/: node.cpp  node.h  wallet.cpp  wallet.h
src/json/: json_spirit_value.cpp  json_spirit_value.h
src/leveldb/: build_detect_platform
src/m4/: ax_boost_base.m4  bitcoin_qt.m4  dogecoin_find_bdb51.m4  dogecoin_qt.m4  dogecoin_subdir_to_include.m4
src/mac/: Info.plist
src/node/: coinstats.h
src/pat/: README_PAT.md  large_scale_pat_benchmark.py  pat_benchmark.py  pat_comprehensive_benchmark_results.csv  test_dogecoin_integration.py
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  pureheader.cpp  pureheader.h  transaction.cpp  transaction.h
src/qt/: Makefile.am  aboutdialog.cpp  aboutdialog.h  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askmultisigdialog.cpp  askmultisigdialog.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bitcoin.cpp  bitcoin.qrc  bitcoin_locale.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelreader.cpp  csvmodelreader.h  csvmodelwriter.cpp  csvmodelwriter.h  dogecoin.qrc  editaddressdialog.cpp  editaddressdialog.cpp.autosave  editaddressdialog.h  guiconstants.h  guiutil.cpp  (+87 more)
src/rapidjson/: document.h
src/rpc/: auxcache.cpp  auxcache.h  auxpow.cpp  auxpow_miner.cpp  auxpow_miner.h  blockchain.cpp  blockchain.h  client.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  rawtransaction_util.cpp  register.h  server.cpp  server.h  util.cpp  util.h
src/script/: bitcoinconsensus.cpp  descriptor.cpp  dogecoinconsensus.cpp  dogecoinconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  script.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: gen_context
src/setupscript-win32/: readme.txt  setupscript.iss
src/support/: cleanse.cpp  experimental.h  lockedpool.cpp  lockedpool.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README  addrman_tests.cpp  alert_tests.cpp  amount_tests.cpp  auxcache_tests.cpp  auxpow_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bctest.py  bip32_tests.cpp  bip39_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  checkqueue_tests.cpp  coingreen_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  (+47 more)
(+2076 files in other folders)
